--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Flashcards APP</string>
     <string name="title_activity_flashcards">Flashcards</string>
     <string name="title_activity_flash_questions">flashQuestions</string>
+    <string name="title_activity_scorescreen">scorescreen</string>
 </resources>
